welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: not found: value j
setCouleurBrosse(T(j));
                   ^